added content{images} for employment made changes for employment.html

--- a/html/employment.html
+++ b/html/employment.html
@@ -35,6 +35,19 @@
         <div class="container employment-header">
             <!-- Heading -->
             <h2 class="mb-3 employment-heading">Employment Types and FSI supported</h2>
+
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <div class="view overlay zoom">
+                        <img src="../img/employment/employment.jpg" class="img-fluid h-400" alt="contract">
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="view overlay zoom">
+                        <img src="../img/employment/job-offer.jpg" class="img-fluid h-400" alt="contract">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Note the side nav links that will be used -->
@@ -64,9 +77,19 @@
                     The extension of the contract depends on various conditions such as bugdet, product delivery, your
                     performance.</p>
                 <p>
-                    Primarily it depends on the consultants relationship wit the hiring manager or the client Point ofContact(POC)
+                    Primarily it depends on the consultants relationship wit the hiring manager or the client Point
+                    ofContact(POC)
                     who oversees the project you are hired for.
                 </p>
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="view overlay zoom">
+                            <img src="../img/employment/contract.jpg" class="img-fluid h-400" alt="contract">
+                        </div>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
                 <p>To know more about Contract roles or speak with us
                     <a href="contact.html" class="font-weight-bold">Click here</a>.</p>
             </div>
@@ -89,7 +112,20 @@
                 <p>Part Time employment is where you work 20 hours instead of your full 40 hours.</p>
                 <p>Be it client, for FSI, doesnt matter the time will be capped at 20-25 hours per week</p>
                 <p>Normally, people who are in between jobs, or in college prefer to do part time</p>
-                <p>We help students work part time with us and also assist with the steps involved for college permission.</p>
+                <p>We help students work part time with us and also assist with the steps involved for college
+                    permission.</p>
+
+
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="view overlay zoom">
+                            <img src="../img/employment/part-time.png" class="img-fluid" alt="contract">
+                        </div>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
+
                 <p>To know more about how you can work on part-time or as an intern with FSI
                     <a href="contact.html" class="font-weight-bolder">Contact Us</a></p>
             </div>
@@ -121,6 +157,16 @@
                     These are non-negotiable and will be required before going fulltime with client.
                 </p>
 
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="view overlay zoom">
+                            <img src="../img/employment/full-time.jpg" class="img-fluid" alt="contract">
+                        </div>
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
+
                 <p>To know more about fulltime any other queries related to fulltime
                     <a href="contact.html" class="font-weight-bolder">Contact Us</a>.</p>
             </div>
@@ -139,6 +185,7 @@
 
         <hr class="hr-light">
     </div>
+    <!-- Container-->
 </main>
 <footer id="footer"></footer>
 
