commit changes for fsi

--- a/html/contact.html
+++ b/html/contact.html
@@ -172,7 +172,7 @@
                             <!--Note email address-->
                             <li><i class="fas fa-envelope mt-4 fa-2x custom-circle"></i>
                                 <div class="font-weight-bold pt-1">Email Us</div>
-                                <p><a href="mailto:dev@fargosolutions.us">dev@fargosolutions.us</a></p>
+                                <p><a href="mailto:contact@fargosolutions.net">contact@fargosolutions.net</a></p>
                             </li>
                         </ul>
                     </div>
