commit changes for fsi for advertiser and publisher

--- a/html/publisher.html
+++ b/html/publisher.html
@@ -162,6 +162,8 @@
                         <button class="btn btn-unique" id="submit">Sign Up</button>
                     </div>
                 </div>
+                <!--Status area-->
+                <div class="text-hide font-weight-bolder" id="status"></div>
             </form>
         </div>
         <!--./ Career container-->
