changes for career for new job opening

--- a/html/careers.html
+++ b/html/careers.html
@@ -20,9 +20,35 @@
         <div class="container"><h2 class="mb-3 home-content-heading">Your Talent Our Opportunities</h2></div>
         <div class="container p-0 pb-2" id="careerContainer">
             <div class="row pb-4 text-center" id="careerTop">
-                <div class="col-md-12"><p class="text-center">You have the skill we have the opportunity. As a team, we
-                    work passionately for you to get the right career opportunity across a wide range industries and
-                    functions.</p><a class="btn btn-outline-info btn-hover-info" href="contact.html">Job Enquiries</a>
+                <div class="col-md-12">
+                    <p class="text-center">You have the skill we have the opportunity. As a team, we
+                        work passionately for you to get the right career opportunity across a wide range industries and
+                        functions.</p>
+                    <div class="d-flex flex-column text-left job-position">
+                        <div class="title text-center text-capitalize">Current Position</div>
+                        <div><b>Job Title:</b> Business Analyst</div>
+
+                        <div>
+                            <b>Job Description:</b> Analyze and perform optimization for understanding and leveraging
+                            the claims adjudication process and system to implement & lead collaborative efforts for
+                            creating and enhancing complex healthcare processes using Center for Medicare & Medicaid
+                            Services (CMS) measures. Perform proof of concept (POC) to analyze and improve complex
+                            processes using tools like Microsoft Visio, PowerPoint, & Excel. Perform requirements
+                            gathering, interview SME’s. Conduct data analysis. Perform extensive data analysis for
+                            optimizing processing system, ensuring optimal turn-around time and processing time. Provide
+                            solutions for unique benefits.
+                        </div>
+                        <div>
+                            <b>Job Location:</b> Will work in West Fargo, ND and various unanticipated locations
+                            throughout the US as assigned, which may require relocation.
+                        </div>
+                        <div>
+                            <b> Contact:</b> Interested applicants may send their resumes to Fargo Solutions Inc, 623
+                            Main Ave, Ste 102B, West Fargo, ND 58078, USA. Attn: HR. Resume must specifically identify
+                            all education & experience relevant to job offered.
+                        </div>
+                    </div>
+                    <a class="btn btn-outline-info btn-hover-info" href="contact.html">Job Enquiries</a>
                 </div>
             </div>
             <hr class="hr-dark">
