changes for career for new job opening hide the button and remove text decoration

--- a/html/careers.html
+++ b/html/careers.html
@@ -48,7 +48,7 @@
                             all education & experience relevant to job offered.
                         </div>
                     </div>
-                    <a class="btn btn-outline-info btn-hover-info" href="contact.html">Job Enquiries</a>
+                    <a class="btn btn-outline-info btn-hover-info invisible" href="contact.html">Job Enquiries</a>
                 </div>
             </div>
             <hr class="hr-dark">
