--- a/html/airlinecall/terms.html
+++ b/html/airlinecall/terms.html
@@ -19,6 +19,9 @@
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
     <link href="css/airline.min.css" rel="stylesheet">
+
+    <!-- Number Pool swap-->
+    <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
 <body class="scrollbar scrollbar-deep-blue">
 <header>
