nav bar bug  fix for class active add new website images scrollbar changes for new website

--- a/html/reservationphonenumbers/contact-us.html
+++ b/html/reservationphonenumbers/contact-us.html
@@ -22,9 +22,9 @@
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-deep-blue">
+<body class="scrollbar scrollbar-rare-wind">
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light secondary-color">
+    <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
@@ -36,14 +36,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link active" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
