--- a/html/reservationphonenumbers/index.html
+++ b/html/reservationphonenumbers/index.html
@@ -22,9 +22,9 @@
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-deep-blue">
+<body class="scrollbar scrollbar-rare-wind">
 <header>
-    <nav class="navbar navbar-expand-lg navbar-orange secondary-color">
+    <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
