--- a/html/reservationphonenumbers/privacy.html
+++ b/html/reservationphonenumbers/privacy.html
@@ -22,7 +22,7 @@
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-deep-blue">
+<body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container">
