code refactoring add new ico files and image logo

--- a/html/ticketairlinebooking/about-us.html
+++ b/html/ticketairlinebooking/about-us.html
@@ -8,26 +8,27 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+    <link rel="icon" href="img/ticketairlinebooking/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/ticketairlinebooking/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/ticketairlinebooking/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/ticketairlinebooking/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Material Design Bootstrap and Custom included -->
-    <link href="css/reservationPhNum.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.min.css" rel="stylesheet">
+    <link href="css/airline.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-rare-wind">
+<body class="scrollbar scrollbar-deep-blue">
 <header>
-    <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
+    <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/ticketairlinebooking/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
                      alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -36,7 +37,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
@@ -78,7 +79,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -102,7 +103,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -126,7 +127,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
