--- a/html/ticketairlinebooking/contact-us.html
+++ b/html/ticketairlinebooking/contact-us.html
@@ -8,10 +8,10 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/airlinecall/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/airlinecall/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/airlinecall/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/airlinecall/ico/favicon-16x16.png">
+    <link rel="icon" href="img/ticketairlinebooking/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/ticketairlinebooking/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/ticketairlinebooking/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/ticketairlinebooking/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/ticketairlinebooking/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
                      alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -38,13 +38,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -52,14 +52,11 @@
     </nav>
 </header>
 <main>
-    <div class="container-fluid" id="intro">
+    <div class="container-fluid" id="intro" style="min-height: 300px !important;">
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
                     <h1 class="header">Contact Us</h1>
-                </div>
-                <div class="col-md-12">
-                    <p class="body">Travel Simply and Economically!</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -68,20 +65,11 @@
         </div>
     </div>
     <hr class="hr-light">
-    <div class="container d-flex ">
-        <iframe class="w-100 border-0 position-relative" id="travelIFrame"
-                src="//www.travelpayouts.com/widgets/f8cc693dbceeb8fdeb209cba3235f71f.html?v=2235">
-        </iframe>
-    </div>
-    <hr class="hr-light">
-    <div class="container margin-minus-10p" id="aboutUsContainer">
-        <h1 class="header">About Us</h1>
-        <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
-            and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
-            flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
-            TicketAirlineBooking.com will help you save money on your next flight reservation.
-        </p>
+    <div class="container" id="aboutUsContainer">
+        <h1 class="header">Need Help? We are here to assist you 24/7!</h1>
+        <p class="font-weight-bold">To make a new flight reservation, changes or cancellations please call:
+            <a class="number-replace parah-link">1 (844) 968-2124</a></p>
+
         <div class="row text-center">
             <div class="col-md-4">
                 <!-- Card -->
@@ -89,7 +77,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -113,7 +101,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -137,7 +125,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/ticketairlinebooking/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
