--- a/html/reservationairticket/about-us.html
+++ b/html/reservationairticket/about-us.html
@@ -8,10 +8,10 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/airlinecall/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/airlinecall/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/airlinecall/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/airlinecall/ico/favicon-16x16.png">
+    <link rel="icon" href="img/reservation/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/reservation/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/reservation/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/reservation/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
                      alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -36,11 +36,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">About Us</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="about-us.html">About Us<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact-us.html">Contact Us</a>
@@ -51,30 +51,17 @@
     </nav>
 </header>
 <main>
-    <div class="container-fluid" id="intro">
+    <div class="container-fluid" id="intro" style="min-height: 250px !important;">
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">Contact Us</h1>
-                </div>
-                <div class="col-md-12">
-                    <p class="body">Travel Simply and Economically!</p>
-                </div>
-                <div class="col-md-12">
-                    <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
+                    <h1 class="header">About Us</h1>
                 </div>
             </div>
         </div>
     </div>
     <hr class="hr-light">
-    <!--Note holds the trip payout widget-->
-    <div class="container d-flex ">
-        <iframe class="w-100 border-0 position-relative" id="travelIFrame"
-                src="//www.travelpayouts.com/widgets/444787d409cef89cd87f886bad23ab52.html?v=2178">
-        </iframe>
-    </div>
-    <hr class="hr-light">
-    <div class="container margin-minus-10p" id="aboutUsContainer">
+    <div class="container" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
             At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
@@ -82,6 +69,8 @@
             flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
             TicketAirlineBooking.com will help you save money on your next flight reservation.
         </p>
+        <p class="font-weight-bold">To make a new flight reservation, changes or cancellations please call:
+            <a class="number-replace parah-link">1 (844) 968-2124</a></p>
         <div class="row text-center">
             <div class="col-md-4">
                 <!-- Card -->
