--- a/html/reservationairticket/contact-us.html
+++ b/html/reservationairticket/contact-us.html
@@ -8,27 +8,26 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+    <link rel="icon" href="img/reservation/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/reservation/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/reservation/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/reservation/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/airline.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap and Custom included -->
+    <link href="css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-deep-blue">
+<body class="scrollbar scrollbar-rare-wind">
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light secondary-color">
+    <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
                      alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -40,11 +39,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about-us.html">About Us<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link active" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -52,26 +51,24 @@
     </nav>
 </header>
 <main>
-    <div class="container-fluid" id="intro" style="min-height: 250px !important;">
+    <div class="container-fluid" id="intro" style="min-height: 300px !important;">
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">About Us</h1>
+                    <h1 class="header">Contact Us</h1>
+                </div>
+                <div class="col-md-12">
+                    <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
                 </div>
             </div>
         </div>
     </div>
     <hr class="hr-light">
     <div class="container" id="aboutUsContainer">
-        <h1 class="header">About Us</h1>
-        <p class="body">
-            At TicketAirlineBooking.com our mission is to help domestic and international travelers book flights, make changes
-            and cancellations at a discount. Our 24/7 flight reservation desk is here to assist you with all of your
-            flight travel arrangements. Whether you choose to book a flight directly on our website or over the phone,
-            TicketAirlineBooking.com will help you save money on your next flight reservation.
-        </p>
+        <h1 class="header">Need Help? We are here to assist you 24/7!</h1>
         <p class="font-weight-bold">To make a new flight reservation, changes or cancellations please call:
             <a class="number-replace parah-link">1 (844) 968-2124</a></p>
+
         <div class="row text-center">
             <div class="col-md-4">
                 <!-- Card -->
@@ -79,7 +76,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -103,7 +100,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -127,7 +124,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="img/airlinecall/check-circle.png" alt="Card image cap">
+                        <img src="img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
