--- a/html/reservationairticket/terms.html
+++ b/html/reservationairticket/terms.html
@@ -8,27 +8,26 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="img/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+    <link rel="icon" href="img/reservation/ico/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/reservation/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/reservation/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/reservation/ico/favicon-16x16.png">
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/airline.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap and Custom included -->
+    <link href="css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
 </head>
-<body class="scrollbar scrollbar-deep-blue">
+<body class="scrollbar scrollbar-rare-wind">
 <header>
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/airlinecall/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
+                <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
                      alt="Ticket Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
