code refactoring and some bug fixes

--- a/html/reservationairticket/contact-us.html
+++ b/html/reservationairticket/contact-us.html
@@ -28,7 +28,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Ticket Airline Booking">
+                     alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -163,7 +163,7 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2020 Ticket Airline Booking - 66 W. Flagler St, Miami FL 33130</p>
+        <p> © 2020 Reservation Air Ticket - 66 W. Flagler St, Miami FL 33130</p>
         <p>
             TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
             been published on its website. Note that any such description or information, which includes but is not
