--- a/html/reservationairticket/privacy.html
+++ b/html/reservationairticket/privacy.html
@@ -28,7 +28,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Ticket Airline Booking">
+                     alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
                 We use your Personal Information for providing and improving the Service. By using the Service, you
                 agree to the collection and use of information in accordance with this policy. Unless otherwise defined
                 in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and
-                Conditions, accessible at https://ticketairlinebooking.com</p>
+                Conditions, accessible at https://reservationairticket.com</p>
 
             <h1>Information Collection And Use</h1>
             <p>While using our Service, we may ask you to provide us with certain personally identifiable information
@@ -147,12 +147,12 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2020 Ticket Airline Booking - 66 W. Flagler St, Miami FL 33130</p>
+        <p> © 2020 Reservation Air Ticket - 66 W. Flagler St, Miami FL 33130</p>
         <p>
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which ReservationAirTicket.com will not be held liable. Moreover, ReservationAirTicket.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
