--- a/html/ticketairlinebooking/contact-us.html
+++ b/html/ticketairlinebooking/contact-us.html
@@ -18,7 +18,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/airline.min.css" rel="stylesheet">
+    <link href="css/ticketairlinebooking.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
@@ -37,7 +37,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
