--- a/html/reservationairticket/terms.html
+++ b/html/reservationairticket/terms.html
@@ -28,7 +28,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/reservation/reservationairticket-logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Ticket Airline Booking">
+                     alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
             <span>by Rono / November 9, 2020</span>
             <p>Last updated: November 9, 2020
             <p>Please read these Terms of Use (“Terms”, “Terms of Use”) carefully before using the
-            <p>https://ticketairlinebooking.com website (the “Service”) operated by (“us”, “we”, or “our”).
+            <p>https://reservationairticket.com website (the “Service”) operated by (“us”, “we”, or “our”).
 
             <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these
                 Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
@@ -122,12 +122,12 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2020 Ticket Airline Booking - 66 W. Flagler St, Miami FL 33130</p>
+        <p> © 2020 Reservation Air Ticket - 66 W. Flagler St, Miami FL 33130</p>
         <p>
-            TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
+            ReservationAirTicket.com does not guarantee the accuracy of any content, information, product, or service that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
-            inaccuracies and errors for which TicketAirlineBooking.com will not be held liable. Moreover, TicketAirlineBooking.com
+            inaccuracies and errors for which ReservationAirTicket.com will not be held liable. Moreover, ReservationAirTicket.com
             reserves the right to edit, modify or change any piece of information at any given time. In case a customer
             has made reservation from this website under the published price that is wrong, then customer will be given
             a chance to either continue the same reservation under the correct price or to cancel the reservation
