--- a/html/ticketairlinebooking/about-us.html
+++ b/html/ticketairlinebooking/about-us.html
@@ -18,7 +18,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link href="css/airline.min.css" rel="stylesheet">
+    <link href="css/ticketairlinebooking.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
