html design changes

--- a/html/reservationairticket/about-us.html
+++ b/html/reservationairticket/about-us.html
@@ -163,10 +163,10 @@
         </div>
     </div>
 </main>
-<footer id="footer" class="page-footer unique-color-dark pt-2">
-    <div class="container text-center">
-        <p> © 2020 Reservation Air Ticket - 66 W. Flagler St, Miami FL 33130</p>
-        <p>
+<footer id="footer" class="page-footer unique-color pt-2">
+    <div class="container">
+        <p class="text-left"> © 2020 Reservation Air Ticket - 66 W. Flagler St, Miami FL 33130</p>
+        <p class="text-left">
             TicketAirlineBooking.com does not guarantee the accuracy of any content, information, product, or service that has
             been published on its website. Note that any such description or information, which includes but is not
             limited to price, infographics, graphics, photo, product or service description, etc., can consist of
@@ -176,8 +176,8 @@
             a chance to either continue the same reservation under the correct price or to cancel the reservation
             without any termination fee.
         </p>
-        <p>
-            <a href="privacy.html">Privacy Policy</a> - <a href="terms.html">Terms and Conditions</a>
+        <p class="text-center pb-1">
+            <a href="privacy.html" class="footer-links">Privacy Policy</a> - <a href="terms.html" class="footer-links">Terms and Conditions</a>
         </p>
     </div>
 </footer>
