call icon fix, html changes for font  awesome

--- a/html/reservationairticket/terms.html
+++ b/html/reservationairticket/terms.html
@@ -16,11 +16,17 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!--Font Awesome 5-->
+    <link href="css/modules/fontawesome.min.css" rel="stylesheet">
+    <link href="css/modules/brands.min.css" rel="stylesheet">
+    <link href="css/modules/regular.min.css" rel="stylesheet">
+    <link href="css/modules/solid.min.css" rel="stylesheet">
+
     <!-- Material Design Bootstrap and Custom included -->
     <link href="css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
-    <script src=//b-js.ringba.com/CA9969e1451c0f423c84a7af299e5e42a4 async></script>
+    <script src=//b-js.ringba.com/CAda1c23513e894b50b6fd57552fff31fb async></script>
 </head>
 <body class="scrollbar scrollbar-rare-wind">
 <header>
@@ -149,8 +155,8 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
 <script>
-    const numberString = "18883034272";
-    const formattedNumber = "1(888)-303-4272";
+    const numberString = "18886092250";
+    const formattedNumber = "1(888)-609-2250";
 </script>
 <script type="text/javascript" src="js/basic.min.js"></script>
 </body>
