--- a/html/ticketairlinebooking/about-us.html
+++ b/html/ticketairlinebooking/about-us.html
@@ -16,6 +16,13 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!--Font Awesome 5-->
+    <link href="css/modules/fontawesome.min.css" rel="stylesheet">
+    <link href="css/modules/brands.min.css" rel="stylesheet">
+    <link href="css/modules/regular.min.css" rel="stylesheet">
+    <link href="css/modules/solid.min.css" rel="stylesheet">
+
+
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
     <link href="css/ticketairlinebooking.min.css" rel="stylesheet">
