phone number change for RAT

--- a/html/reservationairticket/privacy.html
+++ b/html/reservationairticket/privacy.html
@@ -26,7 +26,7 @@
     <link href="css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
-    <script src=//b-js.ringba.com/CAda1c23513e894b50b6fd57552fff31fb async></script>
+    <script src=//b-js.ringba.com/CA61b9c4a0a224426eaef1b970467fd809 async></script>
 </head>
 <body class="scrollbar scrollbar-rare-wind">
 <header>
@@ -180,8 +180,8 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
 <script>
-    const numberString = "18886092250";
-    const formattedNumber = "1(888)-609-2250";
+    const numberString = "+16072608096";
+    const formattedNumber = "1(607)-260-8096";
 </script>
 <script type="text/javascript" src="js/basic.min.js"></script>
 </body>
